--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>youexpense-ui</title>
   </head>
   <body>
+    <header  class="py-4 bg-dark text-white-50">
+      <div class="container text-center">
+        <small>Header</small>
+      </div>
+    </header>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+      <div class="container text-center">
+        <small>Copyright &copy; Your Website</small>
+      </div>
+    </footer>
   </body>
 </html>
