--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>youexpense-ui</title>
-  </head>
-  <body>
-    <header  class="py-4 bg-dark text-white-50">
-      <div class="container text-center">
-        <small>Header</small>
-      </div>
-    </header>
-
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-      <div class="container text-center">
-        <small>Copyright &copy; Your Website</small>
-      </div>
-    </footer>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>youexpense-ui</title>
+</head>
+<body>
+<div id="app"></div>
+<App/>
+</body>
 </html>
